--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ p i{
     position: relative;
     top:18vw;
     border: 1px solid;
-    background-color: white;
+    background-color:cadetblue;
     color: black;
     padding: .6vw;
 }
